Simple modification to index html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- The Search Header -->
     <header class="top-header">
         <div class="google-logo">
-            <a href="https://mohammedal-nabahin.github.io/Google-Search-Page/">
+            <a href="https://ibrahimsahhar.github.io/GSG-Task3//">
                 <img src="images/googlelogo.png" alt="google logo" width="100px">
             </a>
         </div>
